bdr.BDR.scala.code
if (estSurMessage()){
  litMessage()
  if (string=='R'){
    droite()
    avance()
  }
}